--- a/NotasAlumnosFX/src/Vista/MenuEstudiante.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuEstudiante.fxml
@@ -56,9 +56,10 @@
             </Label>
             <Separator layoutX="42.0" layoutY="64.0" prefHeight="10.0" prefWidth="324.0" />
             <Button layoutX="59.0" layoutY="344.0" mnemonicParsing="false" onAction="#btnLimpiar" text="Limpiar" />
-            <Button layoutX="141.0" layoutY="476.0" mnemonicParsing="false" onAction="#btnAtras" text="Atras" />
-            <Button layoutX="220.0" layoutY="406.0" mnemonicParsing="false" onAction="#btnPdf" text="Cargar Datos" />
+            <Button layoutX="220.0" layoutY="474.0" mnemonicParsing="false" onAction="#btnAtras" text="Atras" />
+            <Button layoutX="59.0" layoutY="474.0" mnemonicParsing="false" onAction="#btnPdf" text="Cargar Datos" />
             <Button layoutX="59.0" layoutY="406.0" mnemonicParsing="false" onAction="#btnMostrarAnulados" text="Anulados" />
+            <Button layoutX="220.0" layoutY="406.0" mnemonicParsing="false" onAction="#btnReactivar2ElRegreso" text="Reactivar" />
          </children>
       </Pane>
    </children>
