--- a/NotasAlumnosFX/src/Vista/MenuCarnet.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuCarnet.fxml
@@ -16,12 +16,12 @@
    <children>
       <AnchorPane id="AnchorPane" layoutY="-7.0" prefHeight="647.0" prefWidth="1060.0" styleClass="mainFxmlClass" stylesheets="@menucarnet.css">
          <children>
-            <Label layoutX="31.0" layoutY="109.0" text="Seleccionar:">
+            <Label layoutX="31.0" layoutY="77.0" text="Seleccionar:">
                <font>
                   <Font size="22.0" />
                </font>
             </Label>
-            <ChoiceBox fx:id="chAlumnos" layoutX="138.0" layoutY="104.0" prefHeight="30.0" prefWidth="195.0" />
+            <ChoiceBox fx:id="chAlumnos" layoutX="139.0" layoutY="72.0" prefHeight="30.0" prefWidth="195.0" />
             <Label fx:id="lbGrado" layoutX="698.0" layoutY="354.0" />
             <Label fx:id="lbSeccion" layoutX="956.0" layoutY="354.0" />
             <Label fx:id="txt4" layoutX="846.0" layoutY="354.0" text="Seccion:" />
@@ -30,11 +30,11 @@
             <Label fx:id="lbApelldio" layoutX="718.0" layoutY="292.0" />
             <Label fx:id="txt2" layoutX="609.0" layoutY="292.0" text="Apellido:" />
             <Label fx:id="txt" layoutX="609.0" layoutY="236.0" text="Nombre:" />
-            <Button fx:id="btnRegresar" layoutX="81.0" layoutY="440.0" mnemonicParsing="false" onAction="#btnRegresar" prefWidth="224.0" text="Regresar" />
-            <Button layoutX="81.0" layoutY="260.0" mnemonicParsing="false" onAction="#btnBuscarEstudiante" text="Buscar" />
-            <TextField fx:id="txtCui" layoutX="146.0" layoutY="193.0" prefHeight="31.0" prefWidth="159.0" />
-            <Label layoutX="23.0" layoutY="197.0" text="BUSCAR CUI:" />
-            <Button defaultButton="true" layoutX="81.0" layoutY="351.0" mnemonicParsing="false" onAction="#btnImprimirCarnet" text="Imprimir Carnet" />
+            <Button fx:id="btnRegresar" layoutX="74.0" layoutY="480.0" mnemonicParsing="false" onAction="#btnRegresar" prefWidth="224.0" text="Regresar" />
+            <Button layoutX="74.0" layoutY="189.0" mnemonicParsing="false" onAction="#btnBuscarEstudiante" text="Buscar" />
+            <TextField fx:id="txtCui" layoutX="147.0" layoutY="146.0" prefHeight="31.0" prefWidth="159.0" />
+            <Label layoutX="24.0" layoutY="150.0" text="BUSCAR CUI:" />
+            <Button defaultButton="true" layoutX="74.0" layoutY="337.0" mnemonicParsing="false" onAction="#btnCarnetHorizontal" text="Carnet Horizontal" />
             <Label fx:id="txt6" layoutX="609.0" layoutY="174.0" text="CUI:" />
             <Label fx:id="lbCUI" layoutX="670.0" layoutY="174.0" />
             <Label fx:id="lbInstitucion" layoutX="391.0" layoutY="87.0" prefHeight="45.0" prefWidth="645.0" />
@@ -42,6 +42,8 @@
             <Label fx:id="lbFechaMensaje" layoutX="396.0" layoutY="418.0" prefHeight="45.0" prefWidth="645.0" />
             <Label fx:id="txt5" layoutX="512.0" layoutY="497.0" text="Fecha de Vencimiento:" />
             <Label fx:id="lbFechaVenci" layoutX="790.0" layoutY="497.0" prefHeight="32.0" prefWidth="146.0" />
+            <Button layoutX="74.0" layoutY="268.0" mnemonicParsing="false" onAction="#btnCarnetVertical" text="Carnet Vertical" />
+            <Button layoutX="74.0" layoutY="412.0" mnemonicParsing="false" onAction="#btnLimpiar" text="Limpiar" />
          </children>
       </AnchorPane>
    </children>
