--- a/NotasAlumnosFX/src/Vista/MenuBoletin.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuBoletin.fxml
@@ -26,7 +26,7 @@
       <Label fx:id="lbApelldio" layoutX="128.0" layoutY="96.0" />
       <Label fx:id="txt2" layoutX="21.0" layoutY="96.0" text="Apellido:" />
       <Label fx:id="txt" layoutX="20.0" layoutY="47.0" text="Nombre:" />
-      <Button fx:id="btnRegresar" layoutX="81.0" layoutY="512.0" mnemonicParsing="false" onAction="#btnRegresar" prefWidth="224.0" text="Regresar" />
+      <Button fx:id="btnRegresar" layoutX="81.0" layoutY="497.0" mnemonicParsing="false" onAction="#btnRegresar" prefWidth="224.0" text="Regresar" />
       <Button layoutX="137.0" layoutY="383.0" mnemonicParsing="false" onAction="#btnBuscarBoletin" text="Buscar" />
       <TableView fx:id="tblBoletin" layoutX="376.0" layoutY="19.0" prefHeight="293.0" prefWidth="585.0">
          <columns>
@@ -41,6 +41,6 @@
       </TableView>
       <TextField fx:id="txtCui" layoutX="145.0" layoutY="326.0" prefHeight="31.0" prefWidth="179.0" />
       <Label layoutX="18.0" layoutY="331.0" text="BUSCAR CUI:" />
-      <Button defaultButton="true" layoutX="81.0" layoutY="441.0" mnemonicParsing="false" onAction="#btnImprimir" text="Imprimir boletín en PDF" />
+      <Button defaultButton="true" layoutX="81.0" layoutY="441.0" mnemonicParsing="false" onAction="#btnImprimir" text="Imprimir boletín" />
    </children>
 </AnchorPane>
