--- a/NotasAlumnosFX/src/Vista/MenuDocente.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuDocente.fxml
@@ -12,18 +12,18 @@
         <URL value="@menudocente.css" />
     </stylesheets>
    <children>
-      <Label layoutX="170.0" layoutY="58.0" text="Que gusto verte " />
-      <Label fx:id="labelNomDocente" layoutX="164.0" layoutY="103.0" text="Nombre Docente " />
-      <Label layoutX="202.0" layoutY="175.0" text="Grado:" />
-      <Label fx:id="labelGrado" layoutX="284.0" layoutY="175.0" text="Primero" />
-      <Label layoutX="216.0" layoutY="213.0" text="Sección:" />
-      <Label fx:id="labelSeccion" layoutX="320.0" layoutY="213.0" text="A" />
-      <Button layoutX="56.0" layoutY="344.0" mnemonicParsing="false" onAction="#btnInscripcion" text="Inscribir Estudiantes" />
-      <Button layoutX="340.0" layoutY="344.0" mnemonicParsing="false" onAction="#btnRegistoActividades" text="Registar Actividades" />
-      <Button layoutX="56.0" layoutY="429.0" mnemonicParsing="false" onAction="#btnRegistrarNotas" text="Registrar Notas" />
-      <Button layoutX="340.0" layoutY="429.0" mnemonicParsing="false" onAction="#btnImprimirBoletines" text="Imprimir Boletínes" />
-      <Button layoutX="340.0" layoutY="516.0" mnemonicParsing="false" onAction="#btnCerrarSesion" text="Cerrar sesión" />
-      <Button fx:id="btnCambiarContrasenia" layoutX="56.0" layoutY="516.0" mnemonicParsing="false" onAction="#btnCambiarContrasenia" prefWidth="247.0" text="Cambiar Contraseña" />
-      <Button layoutX="189.0" layoutY="260.0" mnemonicParsing="false" onAction="#btnCarnet" text="Carnet" />
+      <Label layoutX="54.0" layoutY="61.0" prefHeight="31.0" prefWidth="476.0" text="Que gusto verte " />
+      <Label fx:id="labelNomDocente" layoutX="30.0" layoutY="117.0" prefHeight="31.0" prefWidth="524.0" text="Nombre Docente " />
+      <Label layoutX="133.0" layoutY="175.0" text="Grado:" />
+      <Label fx:id="labelGrado" layoutX="218.0" layoutY="175.0" text="Primero" />
+      <Label layoutX="330.0" layoutY="175.0" text="Sección:" />
+      <Label fx:id="labelSeccion" layoutX="435.0" layoutY="175.0" text="A" />
+      <Button layoutX="42.0" layoutY="332.0" mnemonicParsing="false" onAction="#btnInscripcion" text="Inscribir Estudiantes" />
+      <Button layoutX="308.0" layoutY="332.0" mnemonicParsing="false" onAction="#btnRegistoActividades" text="Registar Actividades" />
+      <Button layoutX="42.0" layoutY="426.0" mnemonicParsing="false" onAction="#btnRegistrarNotas" text="Registrar Notas" />
+      <Button layoutX="308.0" layoutY="426.0" mnemonicParsing="false" onAction="#btnImprimirBoletines" text="Imprimir Boletínes" />
+      <Button layoutX="308.0" layoutY="516.0" mnemonicParsing="false" onAction="#btnCerrarSesion" text="Cerrar sesión" />
+      <Button fx:id="btnCambiarContrasenia" layoutX="42.0" layoutY="516.0" mnemonicParsing="false" onAction="#btnCambiarContrasenia" prefWidth="247.0" text="Cambiar Contraseña" />
+      <Button layoutX="178.0" layoutY="245.0" mnemonicParsing="false" onAction="#btnCarnet" text="Crear Carnet" />
    </children>
 </AnchorPane>
