--- a/NotasAlumnosFX/src/Vista/MenuDocente.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuDocente.fxml
@@ -12,10 +12,10 @@
         <URL value="@menudocente.css" />
     </stylesheets>
    <children>
-      <Label layoutX="54.0" layoutY="61.0" prefHeight="31.0" prefWidth="476.0" text="Que gusto verte " />
-      <Label fx:id="labelNomDocente" layoutX="30.0" layoutY="117.0" prefHeight="31.0" prefWidth="524.0" text="Nombre Docente " />
-      <Label layoutX="133.0" layoutY="175.0" text="Grado:" />
-      <Label fx:id="labelGrado" layoutX="218.0" layoutY="175.0" text="Primero" />
+      <Label layoutX="54.0" layoutY="61.0" prefHeight="31.0" prefWidth="476.0" text="QUE GUSTO VERTE" />
+      <Label fx:id="labelNomDocente" layoutX="30.0" layoutY="108.0" prefHeight="31.0" prefWidth="524.0" text="Nombre Docente " />
+      <Label layoutX="117.0" layoutY="175.0" text="Grado:" />
+      <Label fx:id="labelGrado" layoutX="202.0" layoutY="175.0" text="Primero" />
       <Label layoutX="330.0" layoutY="175.0" text="Sección:" />
       <Label fx:id="labelSeccion" layoutX="435.0" layoutY="175.0" text="A" />
       <Button layoutX="42.0" layoutY="332.0" mnemonicParsing="false" onAction="#btnInscripcion" text="Inscribir Estudiantes" />
