--- a/NotasAlumnosFX/src/Vista/MenuEvaluacion.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuEvaluacion.fxml
@@ -9,11 +9,11 @@
 
 <AnchorPane id="AnchorPane" prefHeight="640.0" prefWidth="1060.0" styleClass="mainFxmlClass" stylesheets="@menuevaluacion.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuEvaluacionController">
    <children>
-      <Label layoutX="65.0" layoutY="31.0" text="Registo de Actividades" />
+      <Label layoutX="15.0" layoutY="31.0" prefHeight="26.0" prefWidth="326.0" text="Registo de Actividades" />
       <Label layoutX="42.0" layoutY="275.0" text="Nombre: " />
       <Label layoutX="71.0" layoutY="213.0" text="Curso:" />
       <Label layoutX="44.0" layoutY="125.0" text="Bimestre:" />
-      <Label layoutX="21.0" layoutY="70.0" text="Grado:" />
+      <Label layoutX="37.0" layoutY="70.0" text="Grado:" />
       <Label layoutX="203.0" layoutY="70.0" text="Sección:" />
       <Label layoutX="77.0" layoutY="169.0" text="Tipo:" />
       <Label layoutX="14.0" layoutY="318.0" text="Ponderación:" />
@@ -21,7 +21,7 @@
       <Button layoutX="190.0" layoutY="461.0" mnemonicParsing="false" onAction="#btnActualizar" text="Actualizar" />
       <ChoiceBox fx:id="conCurso" layoutX="147.0" layoutY="208.0" prefWidth="150.0" />
       <ChoiceBox fx:id="conBimestre" layoutX="147.0" layoutY="120.0" prefWidth="150.0" />
-      <Label fx:id="rGrado" layoutX="94.0" layoutY="71.0" text="Primero" />
+      <Label fx:id="rGrado" layoutX="106.0" layoutY="70.0" prefHeight="26.0" prefWidth="81.0" text="Primero" />
       <Label fx:id="rSeccion" layoutX="297.0" layoutY="70.0" text="A" />
       <ChoiceBox fx:id="conTipo" layoutX="147.0" layoutY="164.0" prefWidth="150.0" />
       <TextField fx:id="txtNombre" layoutX="135.0" layoutY="275.0" />
