--- a/NotasAlumnosFX/src/Vista/MenuNotas.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuNotas.fxml
@@ -25,7 +25,7 @@
       <Label layoutX="59.0" layoutY="307.0" text="Curso:" />
       <Label layoutX="208.0" layoutY="64.0" text="Seccion:" />
       <Label layoutX="30.0" layoutY="64.0" text="Grado: " />
-      <Label layoutX="133.0" layoutY="26.0" text="Notas" />
+      <Label layoutX="15.0" layoutY="26.0" prefHeight="27.0" prefWidth="325.0" text="Notas" />
       <ChoiceBox fx:id="chCurso" layoutX="142.0" layoutY="302.0" prefHeight="31.0" prefWidth="187.0" />
       <ChoiceBox fx:id="chActividad" layoutX="142.0" layoutY="359.0" prefHeight="31.0" prefWidth="187.0" />
       <Label layoutX="26.0" layoutY="364.0" text="Actividad:" />
